--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ WPDB_DB_USER=root
 WPDB_DB_PASSWORD=root
 # This is the url inside the container
 WPDB_WP_URL=http://localhost:8888
-WPDB_WP_DOMAIN=localhost
+WPDB_WP_DOMAIN=localhost:8888
 WPDB_TABLE_PREFIX=wp_
 WPDB_DUMP_FILE="tests/_data/dump.sql"
 
