--- a/tests/integration.suite.yml
+++ b/tests/integration.suite.yml
@@ -11,11 +11,11 @@ modules:
     config:
         WPLoader:
             wpRootFolder: "%WPUNIT_ROOT_FOLDER%"
-            dbName: "%WPUNIT_DB_NAME%"
-            dbHost: "%WPUNIT_DB_HOST%"
-            dbUser: "%WPUNIT_DB_USER%"
-            dbPassword: "%WPUNIT_DB_PASSWORD%"
-            tablePrefix: "%WPUNIT_TABLE_PREFIX%"
+            dbName: "%DB_NAME%"
+            dbHost: "%DB_HOST%"
+            dbUser: "%DB_USER%"
+            dbPassword: "%DB_PASSWORD%"
+            tablePrefix: "%TABLE_PREFIX%"
             domain: "%WPUNIT_SITE_WP_DOMAIN%"
             adminEmail: "%WPUNIT_SITE_ADMIN_EMAIL%"
             title: "ItalyStrap"
